# mendel-plotly-theme

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
