[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mendel_plotly_theme"]
include-package-data = true

[tool.setuptools.packages]
find = { where = ["mendel_plotly_theme"] }

[tool.setuptools.metadata]
name = "mendel-plotly-theme"
description = "A custom Plotly theme package"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
author = "Mendel Engelaer"
author_email = "ante_stamp.0a@icloud.com"
url = "https://github.com/Mensel123/mendel-plotly-theme"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]